<resources>
    <string name="app_name">Yourquiz</string>
    <string name="cr_er_un_quiz">Créer un quiz</string>
    <string name="nom">Nom</string>
    <string name="date_de_d_but">Date de début</string>
    <string name="choisir">Choisir</string>
    <string name="date_de_fin">Date de fin</string>
    <string name="nombre_maximum_de_participants">Nombre maximum de participants ?</string>
    <string name="question">Question</string>
    <string name="ajouter_une_question">Ajouter une question</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_participate">ParticipateActivity</string>
    <string name="propos_de_yourquiz">À propos de Yourquiz</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
