<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context="hepia.ch.yourquiz.CreateQuizActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cr_er_un_quiz"
        android:textAlignment="center"
        android:textSize="@dimen/title_size" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextViewForm"
                android:labelFor="@id/quiz_name"
                android:text="@string/nom" />

            <EditText
                android:id="@+id/quiz_name"
                style="@style/EditTextForm"
                android:inputType="text" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <Button
                    android:id="@+id/begin_date_button"
                    android:layout_width="129dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/date_de_d_but"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/end_date_button"
                    android:layout_width="129dp"
                    android:layout_height="48dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/date_de_fin"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/begin_date_button"
                    app:layout_constraintStart_toStartOf="@+id/begin_date_button"
                    app:layout_constraintTop_toBottomOf="@+id/begin_date_button" />

                <TextView
                    android:id="@+id/begin_date_textview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/begin_date_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/begin_date_button"
                    app:layout_constraintTop_toTopOf="@+id/begin_date_button" />

                <TextView
                    android:id="@+id/end_date_textview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/end_date_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/end_date_button"
                    app:layout_constraintTop_toTopOf="@+id/end_date_button" />

            </android.support.constraint.ConstraintLayout>

            <CheckBox
                android:id="@+id/enter_participants_nbr"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:labelFor="@id/participant_nbr"
                android:text="@string/nombre_maximum_de_participants" />

            <EditText
                android:id="@+id/participant_nbr"
                style="@style/EditTextForm"
                android:inputType="number"
                android:visibility="gone" />

            <EditText
                style="@style/EditTextForm"
                android:hint="@string/question" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ajouter_une_question" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
